--- a/style.css
+++ b/style.css
@@ -14,3 +14,19 @@
     background-color: grey;
     
 }
+.img-div{
+    height: 700px;
+    width: 800px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    font size :10px;
+
+}
+.body{
+    padding: 20px;
+    font-weight: 100;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
