--- a/style.css
+++ b/style.css
@@ -1,32 +1,91 @@
 *{
-    padding: 0px;
-    max-width: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color:rgb(205,205,205);
 }
+body{
 
-
-#title{
-    flex:none;
-    font-display:2px;
-    font-size: 10px;
-    display: contents;
-    flex: content;
-    border: 0.25rem;
-    background-color: grey;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.6rem;
     
 }
-.img-div{
-    height: 700px;
-    width: 800px;
-    padding: 20px;
+h1{
+    font-size: 4rem;
+    margin-top: 0;
+}
+h1{
     display: flex;
     justify-content: center;
-    font size :10px;
+    margin-top: 20px;
+    padding-top: 20px;
+    line-height: 1.2;
+}
+
+
+.caption{
+    width:40%;
+    /* border: 1px solid red; */
+    margin:0 auto;
+    text-align:center;
+    font-size:24px;
+    padding: 10px;
 
 }
-.body{
-    padding: 20px;
-    font-weight: 100;
+#img-div{
+    width: 100%;
     height: auto;
-    display: flex;
-    justify-content: center;
+    background: #fff;
+    padding: 5px;
 }
+figure{
+    width:80%;
+    margin:20px auto;
+    background-color: #fff;
+}
+#img_caption{
+    display: flex;
+    background-color: #fff;
+    border: 1px solid red;
+}
+#image{
+    max-width: 100%;
+    height: auto;
+}
+
+#tribute-info{
+    text-align:center;
+    font-weight: bold;
+
+}
+h2{
+    font-size: 3.5rem;
+}
+.unordere{
+    padding: 10px;
+    display: flex;
+    justify-items: flex-start;
+}
+ul {
+    max-width: 900px;
+    margin: 0 auto 30px auto;
+    text-align: left;
+    line-height: 1.6;
+    font-weight: lighter;
+  }
+  li {
+    margin: 13px 0;
+  }
+  #tribute-link{
+    text-align: center;
+  }
+  #headline{
+    font: size 2px;
+    text-align: center;
+    width: 50%;
+    padding-bottom: 10px;
+    margin:
