--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ h1{
     width: 100%;
     height: auto;
     background: #fff;
-    padding: 5px;
+    padding: 10px;
+    margin: 0;
 }
 figure{
     width:80%;
@@ -83,9 +84,11 @@ ul {
   #tribute-link{
     text-align: center;
   }
-  #headline{
-    font: size 2px;
+  #healine{
+    font-size :1rem;
     text-align: center;
-    width: 50%;
+    width: 90%;
     padding-bottom: 10px;
-    margin:
+    flex-direction:column;
+    border: #fff;
+  }
