--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+*,html,body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -48,10 +48,10 @@ figure{
     margin:20px auto;
     background-color: #fff;
 }
-#img_caption{
+#img-caption{
     display: flex;
     background-color: #fff;
-    border: 1px solid red;
+    
 }
 #image{
     max-width: 100%;
@@ -88,7 +88,14 @@ ul {
     font-size :1rem;
     text-align: center;
     width: 90%;
-    padding-bottom: 10px;
+    padding:10px;
     flex-direction:column;
     border: #fff;
+  }
+  #two{
+    font-size: 1rem;
+    text-align: left;
+    display: flex;
+    justify-content:left center;
+    line-height:1px;
   }
